force-app/main/default/objects/SuRF_DGX_HOT_CPL_Contacts_Trans__c/fields/Partner_Training_Required__c.field-meta.xml
<CustomField>
    <fullName>Partner_Training_Required__c</fullName>
    <label>Partner Training Required</label>
    <length>10</length>
    <type>Text</type>
</CustomField>