force-app/main/default/objects/SuRF_DGX_HOT_CPL_Contacts_Trans__c/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <label>Phone Number</label>
    <length>140</length>
    <type>Text</type>
</CustomField>