force-app/main/default/objects/SuRF_DGX_HOT_CPL_Contacts_Trans__c/fields/Training_Compliance_Status__c.field-meta.xml
<CustomField>
    <fullName>Training_Compliance_Status__c</fullName>
    <label>Training_Compliance_Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>