force-app/main/default/objects/SuRF_DGX_HOT_CPL_Contacts_Trans__c/fields/Training_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Training_Record_Type__c</fullName>
    <label>Training Record Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>